# search_colleage

./: .gitignore  maharashtra_colleges.csv
backend/: Cargo.toml
backend/migrations/: 20250724121326_create_tables.sql  20250724122716_create_tables.sql
backend/src/: errors.rs  main.rs
backend/src/db/: queries.rs  seeds.rs
backend/src/handlers/: admin.rs  admission.rs  college.rs  cutoff.rs  district.rs  mod.rs
backend/src/models/: admission_requirement.rs  college.rs  college_image.rs  contact_info.rs  cutoff.rs  filters.rs  mod.rs
backend/tests/: integration_tests.rs
data-collection/raw-data/: maharashtra_colleges.csv  maharashtra_colleges.json
data-collection/scripts/: collect_college_data.py  populate_database.py
database/: schema.sql
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/admin-secret-upload/: page.tsx
frontend/src/app/college/[id]/: page.tsx
frontend/src/app/colleges/[id]/: page.tsx
frontend/src/components/: ErrorMessage.tsx  LoadingSpinner.tsx  Pagination.tsx
frontend/src/components/college/: CollegeCard.tsx
frontend/src/components/filters/: FilterSidebar.tsx  SearchBar.tsx
frontend/src/lib/: api.ts
